tests/snapshots/run_wpt_conformance__onnx_isNaN_float32_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_nan.https.any.js",
    "isNaN float32 special values",
    "onnx",
    "PASS",
)
