tests/snapshots/run_wpt_conformance__onnx_l2Pool2d_float16_4D_tensor_all_negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "l2Pool2d.https.any.js",
    "l2Pool2d float16 4D tensor all negative default options",
    "onnx",
    "PASS",
)
